# SD_2022_19BAI10040

./: changelog.md  chess.py  pyproject.toml  readme.md  requirements.txt
Chess/: __init__.py  chess.py
Chess/Game/: display.py  initiateGame.py  runGame.py  sanitize.py  validate.py
Chess/Game/HeroType/: hero1.py  hero2.py  hero3.py  pawn.py
Game/: __init__.py  display.py  initiateGame.py  runGame.py  sanitize.py  validate.py
Game/HeroType/: hero1.py  hero2.py  hero3.py  pawn.py
tests/: __init__.py
